--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tiny-graphql-client",
-  "version": "0.0.3",
+  "name": "@xialvjun/tiny-graphql-client",
+  "version": "0.0.5",
   "description": "a tiny, simple and customable graphql client, only support `query` and `mutation`.",
   "main": "lib/index.js",
   "scripts": {
