my standard ts lib

--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "@xialvjun/tiny-graphql-client",
-  "version": "0.0.6",
-  "description": "a tiny, simple and customable graphql client, only support `query` and `mutation` now.",
-  "main": "lib/index.js",
-  "typings": "lib/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "version": "0.0.7",
+  "description":
+    "a tiny, simple and customable graphql client, only support `query` and `mutation` now.",
+  "repository": "github:xialvjun/tiny-graphql-client",
+  "keywords": ["graphql", "client", "simple", "tiny"],
+  "----------------": "----------------",
+  "peerDependencies": {},
+  "devDependencies": {
+    "rimraf": "^2.6.2",
+    "typescript": "^2.8.3"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xialvjun/tiny-graphql-client.git"
-  },
-  "keywords": [
-    "graphql",
-    "client",
-    "simple",
-    "tiny"
-  ],
+  "dependencies": {},
+  "================": "================",
   "author": "xialvjun@live.com",
   "license": "MIT",
-  "devDependencies": {
-    "typescript": "^2.8.3"
+  "++++++++++++++++": "++++++++++++++++",
+  "files": ["src/", "es/", "lib/", "dist/", "types/"],
+  "-esnext": "esnext_source_code_not_ts",
+  "module": "es/index.js",
+  "main": "lib/index.js",
+  "-unpkg": "dist/index.js",
+  "-jsdelivr": "dist/index.js",
+  "types": "types/index.d.ts",
+  "################": "################",
+  "scripts": {
+    "build":
+      "npm run build:es && npm run build:lib && npm run build:dist && npm run build:types",
+    "build:es": "rimraf -r es && tsc --outDir es --module es6",
+    "build:lib": "rimraf -r lib && tsc --outDir lib --module commonjs",
+    "build:dist": "rimraf -r dist && echo not_implemented",
+    "build:types":
+      "rimraf -r types && tsc --outDir types --declaration --emitDeclarationOnly",
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
