--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,7 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "lib": [
-            "dom",
-            "es6"
-        ],
-        "noImplicitAny": false,
-        "sourceMap": false,
-        "declaration": true,
-        "outDir": "lib"
-    }
+  "compilerOptions": {
+    "jsx": "react",
+    "lib": ["dom", "es6"],
+    "target": "es5"
+  }
 }
