--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "jsx": "react",
     "lib": ["dom", "es6"],
+    "moduleResolution": "node",
     "target": "es5"
-  }
+  },
+  "include": ["src/**/*"]
 }
